# FirstBrief

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
docs/: attention-inbox.md  brand-ui.md  deployment.md  development.md  domain-model.md  implementation-guide-review.md  information-architecture.md  message-reader.md  non-functional-requirements.md  prioritised-backlog.md  prompt-0-verification.md  prompt-1-verification.md  prompt-10-verification.md  prompt-11-verification.md  prompt-12-verification.md  prompt-2-verification.md  prompt-4-verification.md  prompt-5-verification.md  prompt-6-verification.md  prompt-7-verification.md  prompt-8-verification.md  prompt-9-verification.md  release-candidate.md  requirements-traceability.csv  sap-import-contract.md  solution-design.md  state-machine.md  threat-model.md  user-journeys.md  ux-audit.md  ux-backlog.md
docs/adr/: 0001-modular-monolith.md  0002-identity-and-sessions.md  0003-append-only-audit.md  0004-protected-file-storage.md  0005-transactional-outbox-and-jobs.md  0006-reporting-architecture.md  0007-message-lifecycle-and-record-preservation.md  0008-viewing-time-and-acknowledgement.md  0009-scope-first-retrieval.md
docs/requirements/: requirements-register.csv  requirements-review.md  (+2 more)
firstbrief/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
requirements/: base.txt  dev.txt
templates/: base.html  error.html  home.html
tests/: conftest.py  test_assurance_retention.py  test_configuration.py  test_extract_requirements.py  test_foundation.py  test_identity.py  test_messaging.py  test_notifications.py  test_operations.py  test_release_hardening.py  test_reporting.py  test_retrieval.py  test_sapimport.py
tools/: extract_requirements.py
(+181 files in other folders)
