[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firstbrief"
version = "0.1.0"
description = "Secure, auditable operational briefing application"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
dependencies = [
  "celery==5.6.3",
  "Django==5.2.16",
  "django-environ==0.14.0",
  "djangorestframework==3.17.1",
  "gunicorn==26.0.0",
  "psycopg[binary]==3.3.4",
  "redis==8.0.1",
  "whitenoise==6.12.0",
]

[tool.setuptools.packages.find]
include = ["firstbrief*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "firstbrief.settings.test"
addopts = "--strict-markers --strict-config --disable-warnings --maxfail=1"
testpaths = ["tests"]
markers = [
  "integration: requires application infrastructure or database access",
]

[tool.coverage.run]
branch = true
source = ["firstbrief"]
omit = [
  "firstbrief/asgi.py",
  "firstbrief/settings/*",
  "firstbrief/wsgi.py",
  "firstbrief/core/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "DJ", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"firstbrief/settings/*.py" = ["F403", "F405", "S105"]
"firstbrief/core/migrations/*.py" = ["RUF012"]
"tests/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unreachable = true
exclude = ["firstbrief/core/migrations/"]

[[tool.mypy.overrides]]
module = ["celery.*", "environ.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "firstbrief.settings.test"
